# engine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: AddCompilerFlag.cmake  Findwayland.cmake  GznGetAssemblyDialect.cmake  GznOptions.cmake  OptimizeForArchitecture.cmake
code/: CMakeLists.txt
code/include/gzn/: application  foundation  graphics
code/include/gzn/app/: dimensions.hpp  event.hpp  view.hpp
code/include/gzn/fnd/: allocators.hpp  assert.hpp  bits.hpp  clamped.hpp  definitions.hpp  expected.hpp  func.hpp  handle.hpp  hash.hpp  name.hpp  owner.hpp  pointers.hpp  raw-data.hpp  ref-count.hpp  time.hpp  types.hpp  utility.hpp  version.hpp
code/include/gzn/fnd/containers/: common.hpp  dictionary.hpp  dynamic-array.hpp  pool.hpp
code/include/gzn/fnd/internal/: func-details.hpp  str-utils.hpp
code/include/gzn/fnd/util/: unsafe_any_ref.hpp
code/include/gzn/gfx/: backend-type.hpp  backend_type.hpp  commands.hpp  context.hpp  defaults.hpp  gpu-info.hpp  render-capacities.hpp  surface.hpp
code/include/gzn/gfx/backends/ctx/: metal.hpp  opengl.hpp  vulkan.hpp
code/sources/app/: view.cpp
code/sources/app/backends/view/: wayland.inl  x11.inl
code/sources/core/: view.cpp
code/sources/fnd/: allocators.cpp  assert.cpp
code/sources/gfx/: commands.cpp  context.cpp
code/sources/gfx/backends/cmd/: metal.inl  opengl.inl  vulkan.inl
code/sources/gfx/backends/ctx/: metal.cpp  opengl.cpp  vulkan.cpp
docs/: CMakeLists.txt
scrap/: scrap.cmake
scrap/benchmarks/: CMakeLists.txt
scrap/benchmarks/fnd/: bench-dynamic-array.cpp  bench-func.cpp  bench-hash.cpp  rapidhash.hpp
scrap/common/: genstr.hpp
scrap/examples/: CMakeLists.txt  readme.md
scrap/examples/00-easy-hello-world/: README.md  main.cpp
scrap/examples/00-triangle/: README.md  main.cpp
scrap/examples/01-easy-triangle/: README.md  main.cpp
scrap/examples/egl-sandbox/: main.cpp
scrap/examples/explicit-usage/: main.cpp
scrap/examples/gl-sandbox/: main.cpp
scrap/examples/vk-sandbox/: main.cpp
scrap/tests/: CMakeLists.txt
scrap/tests/fnd/: test-allocators.cpp  test-dynamic-array.cpp  test-hash.cpp  test-name.cpp  test-owner.cpp  test-raw-data.cpp
tools/: run-clang-format.py
